Add receving broadcast frames instead of receving video url

--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -17,15 +17,7 @@
     </header>
     <main>
         <h2 id="home">Home Page</h2>
-        <div id="player"></div>
-        <!-- Dropdown for links -->
-        <div class="dropdown">
-            <label for="Streaming">Choose a stream:</label>
-            <select id="streaming" name="selectedStream">
-                <option value="link1">Link1</option>
-                <option value="link2">Link2</option>
-            </select>
-        </div>
+        <img id="video-frame" alt="Live Stream" width="640" height="360">
     </main>
     <footer>
         &copy; Group 1. All rights reserved.
