Update receving broadcast freames

--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <h2 id="home">Home Page</h2>
-        <img id="video-frame" alt="Live Stream" width="640" height="360">
+        <img id="frame" src="" alt="Waiting for frames..." />
         Resolution:
         <option>
             <select id="resolution-select" onchange="changeResolution()">
