--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -16,14 +16,14 @@
     <div class="row">
         <div class="column side">
             <button onclick="startStreaming()">Start Streaming</button>
-            <div>
+            <div class="container">
                 Link:
                 <select id="livestream-select" onchange="changeLiveStream()">
                     <option scr="https://www.youtube.com/watch?v=73-EekdVVU8" value="Bear">Bear</option>
                     <option scr="https://www.youtube.com/watch?v=rnXIjl_Rzy4" value="NYC">NYC</option>
                 </select>
             </div>
-            <div>
+            <div class="container">
                 Resolution:
                 <select id="resolution-select" onchange="changeResolution()">
                     <option value="256p">480p</option>
