Edit endpoints and add function to connectToStream

--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -15,11 +15,12 @@
     </header>
     <div class="row">
         <div class="column side">
+            <button id="connectBttn">Connect to Stream</button>
             <div class="container">
                 Link:
                 <select id="livestream-select" onchange="changeLiveStream()">
-                    <option scr="https://www.youtube.com/watch?v=73-EekdVVU8" value="Bear">Bear</option>
-                    <option scr="https://www.youtube.com/watch?v=rnXIjl_Rzy4" value="NYC">NYC</option>
+                    <option scr="https://www.youtube.com/watch?v=73-EekdVVU8" value="bears">Bears</option>
+                    <option scr="https://www.youtube.com/watch?v=rnXIjl_Rzy4" value="nyc">NYC</option>
                 </select>
             </div>
             <div class="container">
