--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -6,7 +6,6 @@
     <title>Home - OutputStreaming</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
-    <script src="script.js"></script>
 </head>
 
 <body>
@@ -18,14 +17,14 @@
             <button id="connectBttn">Connect to Stream</button>
             <div class="container">
                 Link:
-                <select id="livestream-select" onchange="changeLiveStream()">
+                <select id="livestream-select">
                     <option scr="https://www.youtube.com/watch?v=73-EekdVVU8" value="bears">Bears</option>
                     <option scr="https://www.youtube.com/watch?v=rnXIjl_Rzy4" value="nyc">NYC</option>
                 </select>
             </div>
             <div class="container">
                 Resolution:
-                <select id="resolution-select" onchange="changeResolution()">
+                <select id="resolution-select"">
                     <option value="256p">256p</option>
                     <option value="720p">720p</option>
                     <option value="1080p">1080p</option>
@@ -58,6 +57,7 @@
     <footer>
         &copy; Group 1. All rights reserved.
     </footer>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
