--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -18,8 +18,8 @@
             <div class="container">
                 Link:
                 <select id="livestream-select">
-                    <option scr="https://www.youtube.com/watch?v=73-EekdVVU8" value="bears">Bears</option>
-                    <option scr="https://www.youtube.com/watch?v=rnXIjl_Rzy4" value="nyc">NYC</option>
+                    <option scr="https://www.youtube.com/watch?v=73-EekdVVU8" value="video_frames">Bears</option>
+                    <option scr="https://www.youtube.com/watch?v=rnXIjl_Rzy4" value="video_frames2">NYC</option>
                 </select>
             </div>
             <div class="container">
@@ -50,8 +50,8 @@
             </div>
         </div>
         <div class="column middle">
-            <img id="frame" alt="Detection frame"/>
-            <h3>Waiting for frames...</h3>
+            <img class="frame" id="frame" alt="Detection frame"/>
+            <h3 class="waiting" id="waiting">Waiting for frames...</h3>
         </div>
     </div>
     <footer>
