Add logging throughput function

--- a/app/src/public/index.html
+++ b/app/src/public/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="container">
                 Resolution:
-                <select id="resolution-select"">
+                <select id="resolution-select">
                     <option value="256p">256p</option>
                     <option value="720p">720p</option>
                     <option value="1080p">1080p</option>
